<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">64Digits</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_menu">Menu</string>
    <string name="action_login">Log in</string>
    <string name="action_register">Register</string>
    <string name="action_rules">Rules</string>
    <string name="action_faq">FAQ</string>
    <string name="action_tos">Terms of Service</string>
    <string name="title_activity_blog">BlogActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="avatar_description">A user\'s avatar</string>
    <string name="default_num_blog_comments">0</string>
    <string name="default_blog_title">Ethereal blog</string>
    <string name="default_blog_author">Unseen author</string>
    <string name="frontpage_next">Next</string>
    <string name="frontpage_divider">Divider</string>
    <string name="drawer_open">Open</string>
	<string name="drawer_close">Close</string>

</resources>
