<!-- android:layout_height="?android:attr/listPreferredItemHeight" -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="@dimen/frontpage_item_height"
    android:baselineAligned="false" >

    <!-- Avatar -->

    <LinearLayout
        android:id="@+id/containerAvatar"
        android:layout_width="@dimen/frontpage_avatar_width"
        android:layout_height="@dimen/frontpage_avatar_height"
        android:background="#f4f4f4"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageAvatar"
            android:layout_width="@dimen/frontpage_avatar_width"
            android:layout_height="@dimen/frontpage_avatar_height"
            android:contentDescription="@string/avatar_description"
            android:src="@drawable/ic_launcher" />
    </LinearLayout>

    <!-- All the rest of the content (title, author, comments) -->

    <LinearLayout
        android:id="@+id/containerRight"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_toRightOf="@id/containerAvatar"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <!-- Title and author -->

        <LinearLayout
            android:id="@+id/containerText"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="left|center_vertical"
            android:orientation="vertical"
            android:paddingBottom="8dp"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            android:paddingTop="8dp" >

            <TextView
                android:id="@+id/textTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_blog_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end" />

            <TextView
                android:id="@+id/textAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_blog_author"
                android:textSize="12sp"
                android:textStyle="normal"
                android:maxLines="1"
                android:ellipsize="end" />
        </LinearLayout>

        <!-- Comments -->

        <LinearLayout
            android:id="@+id/containerComments"
            android:layout_width="@dimen/frontpage_numcomments_width"
            android:layout_height="@dimen/frontpage_item_height"
            android:background="#f4f4f4"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonBlog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_menu_start_conversation_blank"
                android:minWidth="@dimen/frontpage_numcomments_width"
                android:text="@string/default_num_blog_comments"
                android:textColor="#666666"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>